// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Для шильдиков с no_model=true отрисовало только шильдик 1`] = `null`;

exports[`Рендерит полный блок AmpCrossLinks - all 1`] = `
<div
  className="AmpCrossLinks"
>
  <h3
    className="AmpCrossLinks__title"
  >
    Всё о Ford C-MAX
  </h3>
  <div
    className="AmpCrossLinks__rating"
  >
    Рейтинг модели
     — 
    4.7
     
    /
     
    5
  </div>
  <div
    className="AmpCrossLinks__wrapper"
  >
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_CATALOG"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/catalog-amp-generation-listing/?mark=FORD&model=C_MAX"
      >
        Каталог Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_LISTING_USED"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?mark=FORD&model=C_MAX&section=used"
      >
        Ford C-MAX с пробегом
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_LISTING_NEW"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?mark=FORD&model=C_MAX&section=new"
      >
        Новые Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_REVIEWS"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="link/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
      >
        Отзывы о Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_STATS"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="link/stats/?mark=FORD&model=C_MAX"
      >
        Статистика цен Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_ENGINE_TAGS_FORD_C_MAX_GASOLINE"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&engine_group=GASOLINE"
      >
        Ford C-MAX с бензиновым двигателем
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_ENGINE_TAGS_FORD_C_MAX_DIESEL"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&engine_group=DIESEL"
      >
        Ford C-MAX с дизельным двигателем
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_BODY_TAGS_FORD_COUPE"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&body_type_group=COUPE"
      >
        Ford C-MAX купе
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_BODY_TAGS_FORD_SEDAN"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=all&category=cars&body_type_group=SEDAN"
      >
        Ford C-MAX седан
      </AmpLink>
    </div>
  </div>
</div>
`;

exports[`Рендерит полный блок AmpCrossLinks - new 1`] = `
<div
  className="AmpCrossLinks"
>
  <h3
    className="AmpCrossLinks__title"
  >
    Всё о Ford C-MAX
  </h3>
  <div
    className="AmpCrossLinks__rating"
  >
    Рейтинг модели
     — 
    4.7
     
    /
     
    5
  </div>
  <div
    className="AmpCrossLinks__wrapper"
  >
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_CATALOG"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/catalog-amp-generation-listing/?mark=FORD&model=C_MAX"
      >
        Каталог Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_LISTING_USED"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?mark=FORD&model=C_MAX&section=used"
      >
        Ford C-MAX с пробегом
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_LISTING_NEW"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?mark=FORD&model=C_MAX&section=new"
      >
        Новые Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_REVIEWS"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="link/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
      >
        Отзывы о Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_STATS"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="link/stats/?mark=FORD&model=C_MAX"
      >
        Статистика цен Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_ENGINE_TAGS_FORD_C_MAX_GASOLINE"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&engine_group=GASOLINE"
      >
        Новые Ford C-MAX с бензиновым двигателем
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_ENGINE_TAGS_FORD_C_MAX_DIESEL"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&engine_group=DIESEL"
      >
        Новые Ford C-MAX с дизельным двигателем
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_BODY_TAGS_FORD_COUPE"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&body_type_group=COUPE"
      >
        Новые Ford C-MAX купе
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_BODY_TAGS_FORD_SEDAN"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=new&category=cars&body_type_group=SEDAN"
      >
        Новые Ford C-MAX седан
      </AmpLink>
    </div>
  </div>
</div>
`;

exports[`Рендерит полный блок AmpCrossLinks - used 1`] = `
<div
  className="AmpCrossLinks"
>
  <h3
    className="AmpCrossLinks__title"
  >
    Всё о Ford C-MAX
  </h3>
  <div
    className="AmpCrossLinks__rating"
  >
    Рейтинг модели
     — 
    4.7
     
    /
     
    5
  </div>
  <div
    className="AmpCrossLinks__wrapper"
  >
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_CATALOG"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/catalog-amp-generation-listing/?mark=FORD&model=C_MAX"
      >
        Каталог Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_LISTING_USED"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?mark=FORD&model=C_MAX&section=used"
      >
        Ford C-MAX с пробегом
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_LISTING_NEW"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?mark=FORD&model=C_MAX&section=new"
      >
        Новые Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_REVIEWS"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="link/reviews-listing-cars/?mark=FORD&model=C_MAX&parent_category=cars"
      >
        Отзывы о Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_STATS"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="link/stats/?mark=FORD&model=C_MAX"
      >
        Статистика цен Ford C-MAX
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_ENGINE_TAGS_FORD_C_MAX_GASOLINE"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&engine_group=GASOLINE"
      >
        Ford C-MAX с бензиновым двигателем c пробегом
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_ENGINE_TAGS_FORD_C_MAX_DIESEL"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&engine_group=DIESEL"
      >
        Ford C-MAX с дизельным двигателем c пробегом
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_BODY_TAGS_FORD_COUPE"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&body_type_group=COUPE"
      >
        Ford C-MAX купе c пробегом
      </AmpLink>
    </div>
    <div
      className="AmpCrossLinks__linkWrapper"
      key="AmpCrossLinks_BODY_TAGS_FORD_SEDAN"
    >
      <AmpLink
        className="AmpCrossLinks__link"
        url="linkDesktop/listing-amp/?catalog_filter=mark%3DFORD%2Cmodel%3DC_MAX&section=used&category=cars&body_type_group=SEDAN"
      >
        Ford C-MAX седан c пробегом
      </AmpLink>
    </div>
  </div>
</div>
`;
